--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,91 +7,17 @@
     android:background="@color/colorPrimaryDark"
     >
 
-    <LinearLayout
+    <com.finchmil.chess.view.BoardView
+        android:id="@+id/board_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_above="@+id/board_layout"
-        android:layout_alignParentTop="true"
-        android:weightSum="2"
-        >
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
-                android:text="Очки"
-                />
-
-            <TextView
-                android:id="@+id/score_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:textColor="#ffffff"
-                android:textSize="35sp"
-                android:layout_gravity="center_horizontal"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:layout_gravity="center_horizontal"
-                android:text="Бонусы"
-                />
-
-            <TextView
-                android:id="@+id/bonuses_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:textColor="#ffffff"
-                android:textSize="35sp"
-                android:layout_gravity="center_horizontal"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:id="@+id/board_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         >
 
         <GridLayout
