--- a/app/src/main/res/layout/board_view.xml
+++ b/app/src/main/res/layout/board_view.xml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
 
-    <GridLayout
-        android:id="@+id/grid_layout"
-        android:layout_width="match_parent"
+    <com.finchmil.chess.view.DisbledHorScroll
+        android:id="@+id/horizontal_scroll"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="8"
-        android:background="#000"
-        />
+        >
 
-    <ImageView
-        android:id="@+id/horse_image_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@mipmap/ic_launcher"
-        />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <GridLayout
+                android:id="@+id/grid_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#000"
+                />
+
+            <ImageView
+                android:id="@+id/horse_image_view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@mipmap/ic_launcher"
+                />
+
+        </FrameLayout>
+
+    </com.finchmil.chess.view.DisbledHorScroll>
 
 </merge>
