--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -7,15 +7,18 @@
     android:background="@color/colorPrimaryDark"
     >
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <com.finchmil.chess.view.BottomBar
+        android:id="@+id/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        />
 
-    <com.finchmil.chess.view.DisabledViewPager
-        android:id="@+id/view_pager"
-        android:layout_below="@id/tab_layout"
+    <com.finchmil.chess.view.BoardView
+        android:id="@+id/board_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_bar"
+        />
 
 </RelativeLayout>
